@@ -31,6 +31,7 @@ Release Notes - Apache Knox - Version 0.7.0
     * [KNOX-614] - Incorrect URI template expansion with {**} query params #fragments
     * [KNOX-616] - XmlUrlRewriteStreamFilter unscapes escaped special characters
     * [KNOX-394] - Request and response URLs must be parsed as literals not templates
+    * [KNOX-623] - Gateway provider rewriter doesn't support boolean attributes in HTML.
 
 ------------------------------------------------------------------------------
 Release Notes - Apache Knox - Version 0.6.0
